# mchat2

./: .build-counter.json  .gitattributes  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: 20260610.review.fable.md  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  IfIWereTostartOver.md  collaboration.prompt.md  convo.md  ideas.md  recipes.md  runs_after-removal-process.md  to-mchat3-or-not-to-mchat3.md  troubleshooting.md
docs/decisions/: 001-lib-app-boundary.md  002-transactions-by-default.md  003-zod-at-trust-boundaries.md  004-openai-compat-meta-provider.md  005-dep-inversion-in-lib-app.md  006-data-layer.md  007-typed-sql-via-kysely.md  008-solid-prototype-findings.md  009-runs-after-removal.md  010-apertus-native-removal.md  011-section-token-transactions.md  012-http-scope-static-plus-runtime.md  013-persistent-model-cache-swr.md  014-artificial-analysis-model-hint.md  016-ui-state-vs-persistent-state.md  README.md
scripts/: bump-version.mjs  bumpLogic.d.mts  bumpLogic.mjs  reset-version.mjs  stamp-version.mjs  tauri-build.mjs  tauri-wrapper.mjs  versionFromGit.mjs
src/: App.tsx  buildInfo.d.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: debug_flag.rs  http_scope.rs  keychain.rs  lib.rs  main.rs  sql_bridge.rs
src/components/: AttemptHistory.tsx  ChatView.tsx  Composer.tsx  ContextMenu.tsx  DiagramBlock.tsx  EditReplayEditor.tsx  FindBar.tsx  FlowEditor.tsx  MatrixPanel.tsx  MessageBubble.tsx  MessageList.tsx  PersonaFormFields.tsx  PersonaPanel.tsx  ProviderSpendTable.tsx  SettingsDialog.tsx  SettingsGeneralDialog.tsx  SettingsOpenaiCompatTab.tsx  Sidebar.tsx  SidebarFooter.tsx  composerKeys.ts  focusTrap.ts  messageBubbleMemo.ts  scrollPin.ts  useConversationExports.ts  useModelOptions.ts  useOpenAICompatPresets.ts  useScrollPin.ts
src/components/persona/: CreateForm.tsx  FlowModeRow.tsx  PersonaPanelExpanded.tsx  PersonaProviderLabel.tsx  PersonaRow.tsx
src/components/ui/: Button.tsx  buttonClasses.ts
src/hooks/: cacheReaders.ts  commandDeps.ts  postResponseCheck.ts  postResponseCheckDeps.ts  runOneTarget.ts  runOneTargetDeps.ts  runPlannedSend.ts  sendMessageDeps.ts  shouldBufferTokens.ts  useSend.ts
src/lib/app/: README.md  deps.ts  flowDispatch.ts  flowPause.ts  flowRewind.ts  flowSelectionSync.ts  postResponseCheck.ts  reorderPersonas.ts  replayMessage.ts  retryMessage.ts  runOneTarget.ts  runPlannedSend.ts  sendMessage.ts  sendSelection.ts  setSelection.ts
src/lib/commands/: activePrompts.ts  autocompactCheck.ts  dispatch.ts  executionOrder.ts  help.ts  limitsizeNotice.ts  parseCommand.ts  personaTimings.ts  personasInfo.ts  runWithRecovery.ts  specs.ts  stats.ts  targetModifier.ts  triggerHelp.ts  visibilityStatus.ts
src/lib/composer/: complete.ts
src/lib/context/: builder.ts  excluded.ts  index.ts  truncate.ts
src/lib/conversations/: autoTitle.ts  compact.ts  compactionCutoff.ts  exportToFile.ts  forkConversation.ts  migrateApertusToOpenaiCompat.ts  migrateRunsAfterToFlow.ts  pinFormatter.ts  popPlan.ts  replay.ts  resolveEditTarget.ts  runCompaction.ts  runCompactionCommit.ts  snapshot.ts  snapshotFileOps.ts  snapshotImport.ts  unread.ts  userHeader.ts  (+1 more)
src/stores/: conversationsStore.ts  flowsStore.ts  index.ts  messagesStore.ts  personasStore.ts  sendStore.ts  uiStore.ts
tests/e2e/: composerKeys.spec.ts  contextMenu.spec.ts  excludedShading.spec.ts  exportHtml.spec.ts  layout.spec.ts  limitCommand.spec.ts  pinCommands.spec.ts  providersDialog.spec.ts  rename.spec.ts  scrollPin.spec.ts  smoke.spec.ts  stickySelection.spec.ts
tests/unit/: sqljsSpike.test.ts
(+351 files in other folders)
