[package]
name = "mchat2"
version = "0.1.0"
description = "Multi-provider LLM chat workbench"
edition = "2021"
rust-version = "1.77"

[lib]
name = "mchat2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-stronghold = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS-native keychain: Credential Manager on Windows (DPAPI), Keychain on
# macOS, Secret Service on Linux. Replaces Stronghold for #35.
keyring = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Compile crypto-heavy deps with optimization even in dev builds, so
# Stronghold's per-save KDF doesn't cost seconds each time.
[profile.dev.package.iota_stronghold]
opt-level = 3
[profile.dev.package.iota-crypto]
opt-level = 3
[profile.dev.package.stronghold_engine]
opt-level = 3
[profile.dev.package.aead]
opt-level = 3
[profile.dev.package.aes-gcm]
opt-level = 3
[profile.dev.package.chacha20poly1305]
opt-level = 3
[profile.dev.package.blake2]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
