[package]
name = "mchat2"
version = "2.53.4"
description = "Multi-provider LLM chat workbench"
edition = "2021"
rust-version = "1.77"

[lib]
name = "mchat2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` exposes Ctrl+Shift+I (and the right-click → Inspect menu)
# in release builds so production crashes are inspectable without
# rebuilding in dev mode. mchat2 is single-user and ships unsigned to
# the developer's own machine; the cost of always-on devtools is nil.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS-native keychain: Credential Manager on Windows (DPAPI), Keychain on
# macOS, Secret Service on Linux. Replaces Stronghold for #35.
# v3 defaults to no platform features — without these, the build picks
# a no-op backend that silently succeeds without persisting anything.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

